[gd_scene load_steps=5 format=3 uid="uid://bapojx50vjj7y"]

[ext_resource type="PackedScene" uid="uid://cbo5qatd6odlp" path="res://ui/custom_nodes/inventory_slot.tscn" id="1_24y4b"]
[ext_resource type="Texture2D" uid="uid://d30hnoge2umoj" path="res://textures/panel_blue.png" id="2_2xsgv"]
[ext_resource type="Script" path="res://ui/custom_nodes/hotbar_slot.gd" id="3_6kikj"]
[ext_resource type="Texture2D" uid="uid://cqvpa06oopyuc" path="res://textures/panelInset_brown.png" id="4_6sixa"]

[node name="HotbarSlot" groups=["HotbarSlots"] instance=ExtResource("1_24y4b")]
texture = ExtResource("2_2xsgv")
script = ExtResource("3_6kikj")

[node name="NumberTextureRect" type="TextureRect" parent="." index="1"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_left = -12.0
offset_top = -12.0
offset_right = 20.0
offset_bottom = 20.0
texture = ExtResource("4_6sixa")
expand_mode = 1

[node name="NumberLabel" type="Label" parent="NumberTextureRect" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 22
horizontal_alignment = 1
vertical_alignment = 1
